# weather

./: .env.example  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  server.js
config/: polymarket_weather.example.yaml
data/: weather.db
frontend/: app.js  cities.html  cities.js  index.html  styles.css
logs/: weather_runtime.jsonl
src/weather_quant/: __init__.py  backtest.py  buckets.py  cache.py  cli.py  config.py  db.py  engine.py  ensemble.py  env.py  http.py  ledger.py  llm.py  market.py  models.py  paper_trading.py  paths.py  portfolio.py  probability.py  risk.py  runtime_logs.py  settlement.py  station_lookup.py  storage.py  units.py  weather.py  web_api.py
tests/: __init__.py  test_polymarket_weather_backtest.py  test_polymarket_weather_buckets.py  test_polymarket_weather_ensemble.py  test_polymarket_weather_env.py  test_polymarket_weather_llm.py  test_polymarket_weather_market.py  test_polymarket_weather_orderbook.py  test_polymarket_weather_paper_trading.py  test_polymarket_weather_portfolio.py  test_polymarket_weather_probability.py  test_polymarket_weather_risk.py  test_polymarket_weather_runtime_logs.py  test_polymarket_weather_settlement.py  test_polymarket_weather_web_api.py
